res/examples/invalid/assert_type_mismatch_with_identifier.eg
let a = false;
assert_type a, number;

// out: TypeError: mismatched types: expected type `number` but received `bool`